Conclusion of second module II

--- a/02-module/03-analisis-datos.ipynb
+++ b/02-module/03-analisis-datos.ipynb
@@ -629,7 +629,7 @@
     "    x, y = p.get_xy()\n",
     "    ax.annotate(f'{int(width)}', (x + width, y + height / 2), ha='left', va='center', fontsize=8)\n",
     "\n",
-    "plt.show()s"
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
